:lipstick: Fixed content and wrapping

--- a/website/src/style/_typo.scss
+++ b/website/src/style/_typo.scss
@@ -84,3 +84,7 @@ ul:not(.nav-links) {
   text-align: left;
   list-style-type: unset;
 }
+
+.nowrap {
+  white-space: nowrap;
+}
